# catprep-local

./: .env.example  .gitignore  ReadMe.md  app.py  main.py  main_ui.py  pyproject.toml  requirements.txt  streamlit_ui.py
agents/: graph.py  graph_builder.py  pre_processor.py  prompts.py  router.py
agents/specialists/: feedback.py  practice.py  study_plan.py
context/: ReadMe.md
core/: config.py  knowledge_graph.py  llm.py  logger.py  state.py  token_tracker.py  utils.py  vector_store.py
docs/: architecture.md  knowledge_graphs.md
examples/: extraction_example.json  parsed_chunks.json  test_extraction.json
legacy_app/: app.py
scripts/: build_knowledge_graph.py  test_ollama.py
utils/: __init__.py  kg_visualizer.py
